# ATmega32u4_Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
dependencies/: Makefile
projects/VS2019/ATmega32u4_Emulator/: ATmega32u4_Emulator.sln
projects/VS2019/ATmega32u4_Emulator/ATmega32u4_Emulator/: ATmega32u4_Emulator.vcxproj  ATmega32u4_Emulator.vcxproj.filters
src/: A32u4Types.h  ATmega32u4.cpp  ATmega32u4.h  config.h
src/components/: Analytics.cpp  Analytics.h  CPU.cpp  CPU.h  CPUTemplates.h  DataSpace.cpp  DataSpace.h  DataspaceConstants.h  Debugger.cpp  Debugger.h  Disassember.cpp  Disassembler.h  Flash.cpp  Flash.h  InstHandler.cpp  InstHandler.h  InstHandlerTemplates.h  InstInds.h  config.h
src/extras/: Analytics.cpp  Analytics.h  Debugger.cpp  Debugger.h  Disassember.cpp  Disassembler.h  ElfReader.cpp  ElfReader.h  SymbolTable.cpp  SymbolTable.h
src/utils/: StringUtils.cpp  StringUtils.h  bitArray.cpp  bitArray.h  bitMacros.h  stringExtras.cpp  stringExtras.h
